--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -1,22 +1,21 @@
 :root {
-  --unit: 4px;
-  --global-bg-color: hsl(210, 38%, 95%);
-  --side-panel-width-units: 94;
-  --side-panel-width: calc(var(--side-panel-width-units) * var(--unit));
-  --title-color: hsl(200, 5%, 30%);
-  --text-color: hsl(200, 5%, 25%);
-  --border-color: hsl(0, 0%, 70%);
-  --border-width: 1px;
-  --surface-color: hsl(0, 0%, 90%);
-  --border-color-alpha: hsla(0, 0%, 0%, 30%);
-  --focused-outline-color: hsl(216, 83%, 62%);
+  --unit:                      4px;
+  --global-bg-color:           #11111B;
+  --side-panel-width-units:    94;
+  --side-panel-width:          calc(var(--side-panel-width-units) * var(--unit));
+  --title-color:               #F38BA8;
+  --text-color:                #CDD6F4;
+  --border-color:              #EEFFF6;
+  --border-width:              1px;
+  --surface-color:             #181825;
+  --border-color-alpha:        #F2CDCD;
+  --focused-outline-color:     #F5C2E7;
   /* Generated with: https://shadows.brumm.af/ */
-  --shadow: 0.9px 0.9px 2.7px hsla(0, 0%, 0%, 0.07), 2.2px 2.2px 6.9px hsla(0, 0%, 0%, 0.048),
+  --shadow:                    0.9px 0.9px 2.7px hsla(0, 0%, 0%, 0.07), 2.2px 2.2px 6.9px hsla(0, 0%, 0%, 0.048),
     4.4px 4.4px 14.2px hsla(0, 0%, 0%, 0.039), 9.1px 9.1px 29.2px hsla(0, 0%, 0%, 0.031),
-    25px 25px 80px hsla(0, 0%, 0%, 0.022);
-  --small-shadow: 0.9px 0.9px 1.7px hsla(0, 0%, 0%, 0.5);
+    25px 25px 80px hsl(171, 47%, 69%);
+  --small-shadow:              0.9px 0.9px 1.7px #F38BA8;
 
   --hover-transition-duration: 200ms;
-  --button-text-color: hsl(216, 0%, 30%);
+  --button-text-color:         #11111B;
 }
- 
